--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Teplograd - innovative billing system based on CoreForms Platform
+Teplograd - innovative billing system based on CoreForms Platform (Advanced custom platform based on Eclipse RCP that enables to create sophisticated rich database driven applications with several times productivity compare to most tools on the market.)
 
-Billing system for heat energy distribution companies built on CoreForms platform. It is used for residential buildings in which bills would be drawn up for each apartment based on actual consumption of heat energy for heating and hot water supply.
+Teplograd is Billing system for heat energy distribution companies built on CoreForms platform. It is used for residential buildings in which bills would be drawn up for each apartment based on actual consumption of heat energy for heating and hot water supply.
 A legislative and institutional model of heat and hot water consumption-based metering and billing was developed. This included legislative requirements, institutional scheme, calculation target groups and payment mechanisms, energy metering schemes, proportional distribution of bills to tenants on the basis on heat use and rules for accounting.
 
